--- a/poc-utxo-reader/Cargo.toml
+++ b/poc-utxo-reader/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "poc-utxo-reader"
 version = "0.0.1"
-description = "A PoC of an UTxO reader from immutable files"
+description = "A PoC of a Cardano transaction reader from immutable files"
 authors = { workspace = true }
 edition = { workspace = true }
 documentation = { workspace = true }
@@ -11,6 +11,9 @@ repository = { workspace = true }
 
 [dependencies]
 anyhow = "1.0.75"
+clap = { version = "4.4.6", features = ["derive"] }
 hex = "0.4.3"
 pallas = "0.19.1"
 rayon = "1.8.0"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
