--- a/poc-utxo-reader/Cargo.toml
+++ b/poc-utxo-reader/Cargo.toml
@@ -11,6 +11,8 @@ repository = { workspace = true }
 
 [dependencies]
 anyhow = "1.0.75"
+blake2 = "0.10.6"
+ckb-merkle-mountain-range = "0.6.0"
 clap = { version = "4.4.6", features = ["derive"] }
 hex = "0.4.3"
 pallas = "0.20.0"
