--- a/poc-utxo-reader/Cargo.toml
+++ b/poc-utxo-reader/Cargo.toml
@@ -15,6 +15,7 @@ blake2 = "0.10.6"
 ckb-merkle-mountain-range = "0.6.0"
 clap = { version = "4.4.6", features = ["derive"] }
 hex = "0.4.3"
+mithril-common = { path = "../mithril-common", version = "0.2" }
 pallas = "0.20.0"
 rayon = "1.8.0"
 serde = { version = "1.0.188", features = ["derive"] }
